# serializer version: 1
# name: test_binary_sensors[Keg][binary_sensor.plaato_plaatodevicetype_keg_device_name_leaking-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.plaato_plaatodevicetype_keg_device_name_leaking',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Plaato Plaatodevicetype.Keg Device_Name Leaking',
    'platform': 'plaato',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'valid_token_Pins.LEAK_DETECTION',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[Keg][binary_sensor.plaato_plaatodevicetype_keg_device_name_leaking-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'beer_name': 'Beer',
      'device_class': 'problem',
      'friendly_name': 'Plaato Plaatodevicetype.Keg Device_Name Leaking',
      'keg_date': '05/24/24',
      'mode': 'Co2',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.plaato_plaatodevicetype_keg_device_name_leaking',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[Keg][binary_sensor.plaato_plaatodevicetype_keg_device_name_pouring-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.plaato_plaatodevicetype_keg_device_name_pouring',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.OPENING: 'opening'>,
    'original_icon': None,
    'original_name': 'Plaato Plaatodevicetype.Keg Device_Name Pouring',
    'platform': 'plaato',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'valid_token_Pins.POURING',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[Keg][binary_sensor.plaato_plaatodevicetype_keg_device_name_pouring-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'beer_name': 'Beer',
      'device_class': 'opening',
      'friendly_name': 'Plaato Plaatodevicetype.Keg Device_Name Pouring',
      'keg_date': '05/24/24',
      'mode': 'Co2',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.plaato_plaatodevicetype_keg_device_name_pouring',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
